unpackaged/objects/PlayerTeam__c.object
<CustomObject>
    <fields>
        <fullName>IsInvited__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsInvited</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Player__c</fullName>
        <label>Player</label>
        <referenceTo>Player__c</referenceTo>
        <relationshipLabel>PlayerTeams</relationshipLabel>
        <relationshipName>PlayerTeams</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Team__c</fullName>
        <label>Team</label>
        <referenceTo>Team__c</referenceTo>
        <relationshipLabel>PlayerTeams</relationshipLabel>
        <relationshipName>PlayerTeams</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>PlayerTeam</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{0000000000}</displayFormat>
        <label>PlayerTeam Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>PlayerTeams</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>